FEATURE(#002): implement rick morty api with testing and styling

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,9 @@
 {
-    "title": "Character List rick"
+    "title": "Character List rick",
+    "characterList": {
+        "error": "There was an error while fetching the characters."
+    },
+    "common": {
+        "loading": "Loading..."
+    }
 }
