--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,3 +1,9 @@
 {
-    "title": "Lista de personajes rick"
+    "title": "Lista de personajes rick",
+    "characterList": {
+        "error": "Hubo un error al cargar los personajes."
+    },
+    "common": {
+        "loading": "Cargando..."
+    }
 }
