FEATURE(#003): add mock to tests and add labels for i18n implementaiton

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,5 +5,12 @@
     },
     "common": {
         "loading": "Loading..."
+    },
+    "character": {
+        "status": "Status",
+        "species": "Species",
+        "gender": "Gender",
+        "origin": "Origin",
+        "location": "Location"
     }
 }
